# xcolour

./: Cargo.toml  Makefile  README.md  build.rs
extra/: xcolour.desktop
man/: xcolour.1
src/: color.rs  main.rs
