[package]
name = "xcolour"
version = "0.5.0"
description = "Lightweight colour picker for X11"
authors = [
  "Samuel Laurén <samuel.lauren@iki.fi>",
  "Callum Osmotherly <acheronfail@gmail.com>"
]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["colour", "color", "utility", "colour-picker", "color-picker", "x11"]
homepage = "https://github.com/krayon/xcolour"
repository = "https://github.com/krayon/xcolour"
build = "build.rs"
exclude = ["docker/*", "_config.yml"]
edition = "2018"

[dependencies]
anyhow = "1.0"
nom = "6.0"
clap = "2.33"
nix = "0.17"
lazy_static = "1.4"

[dependencies.x11]
version = "2.3"
features = ["xlib", "xcursor"]

[dependencies.xcb]
version = "0.9"
features = ["xlib_xcb"]

[build-dependencies]
clap = "2.33"

[profile.release]
lto = true
panic = "abort"

[badges]
travis-ci = { repository = "krayon/xcolour" }
